# lift-cw-template

./: .gitignore  README.md  cargo-generate.toml
contracts/counter/: Cargo.toml
contracts/counter/src/: contract.rs
